Fix vertical scrolling of scrollbar div

--- a/assets/style.css
+++ b/assets/style.css
@@ -29,6 +29,7 @@
 
 .progress-bar{
   height: 30px !important;
+  overflow: visible !important;
 }
 
 .progress-bar span {
